--- a/MamyCare/MamyCare.csproj
+++ b/MamyCare/MamyCare.csproj
@@ -30,6 +30,7 @@
     <Folder Include="wwwroot\BabyProfilePicture\" />
     <Folder Include="wwwroot\BabyMemoriesImages\" />
     <Folder Include="wwwroot\Hospitals\" />
+    <Folder Include="wwwroot\Activities\" />
   </ItemGroup>
 
 </Project>
