--- a/MamyCare/appsettings.json
+++ b/MamyCare/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-   // "Server": "Server=db17298.public.databaseasp.net; Database=db17298; User Id=db17298; Pas;Encrysword=6y%DtZ7@9#Jm; Encrypt=False; MultipleActiveResultSets=True;",
+    // "Server": "Server=db17298.public.databaseasp.net; Database=db17298; User Id=db17298; Pas;Encrysword=6y%DtZ7@9#Jm; Encrypt=False; MultipleActiveResultSets=True;",
     "Default": "Server=db17643.public.databaseasp.net; Database=db17643; User Id=db17643; Password=r_9H6Q!kPo4?; Encrypt=False; MultipleActiveResultSets=True;"
     //"Default": "Server=DESKTOP-9T94OH2\\MSSQLSERVER01;Database=MamyCare;Integrated Security=True;TrustServerCertificate=True;"
   },
@@ -15,8 +15,7 @@
     "Key": "451984befbb883767ebac9f863c20d94401c17e31d6",
     "Issuer": "MaMaCare",
     "Audience": "MaMaCare",
-    "ExpireMinutes": 43200
-
+    "ExpireDays": 30
   },
   "EmailSettings": {
     "Mail": "al.daniel34@ethereal.email",
@@ -24,6 +23,11 @@
     "Password": "",
     "Host": "smtp.ethereal.email",
     "Port": 587
+  },
+  "ServerSetting": {
+    "BaseUrl": "http://graduation-project-version1.runasp.net/"
+
   }
+
 
 }
