Add Articles Service

--- a/MamyCare/appsettings.json
+++ b/MamyCare/appsettings.json
@@ -24,7 +24,7 @@
     "Host": "smtp.ethereal.email",
     "Port": 587
   },
-  "ServerSetting": {
+  "ServerSettings": {
     "BaseUrl": "http://graduation-project-version1.runasp.net/"
 
   }
