Edit Forget Password Endpoint(Add email setting)

--- a/MamyCare/appsettings.json
+++ b/MamyCare/appsettings.json
@@ -18,12 +18,16 @@
     "ExpireDays": 30
   },
   "EmailSettings": {
-    "Mail": "al.daniel34@ethereal.email",
     "DisplayName": "Mamy Care",
-    "Password": "",
-    "Host": "smtp.ethereal.email",
+    "Mail": "shahdsoliman355@gmail.com",
+    "UserName": "shahdsoliman355@gmail.com",
+    "Password": "yrmb qefr aoly votg",
+    "Host": "smtp.gmail.com",
     "Port": 587
   },
+
+
+
   "ServerSettings": {
     "BaseUrl": "http://graduation-project-version1.runasp.net/"
 
