--- a/MamyCare/appsettings.json
+++ b/MamyCare/appsettings.json
@@ -6,8 +6,9 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -25,7 +26,6 @@
     "Host": "smtp.gmail.com",
     "Port": 587
   },
-
 
 
   "ServerSettings": {
